===============
Version 0.9.3
===============

* API change TwNode and derived classes renamed to TNode


===============
Version 0.9.2
===============

* API change Serializable.deserialize now return a boolean

* API change SerializableCollection: added new abstract methods for post-deserialization

* SerializableCollection: Implementations now support enable/disable deserialization
  for post-deseralization using SerializableCollection.deserialize_children() for initial
  document load time optimization

* More memory optimizations: SerializableCollection implementations don't hold
  objects for unknown properties/nodes



===============
Version 0.9.1
===============

* Added GXml.Node.parent property
* Performance measuring: GDocument equivalent to xDocument
* Memory usage: GDocument 42% less memory
* Memory for de/serialization using GDocument+TwDocument Vs.
  xDocument+TwDocument improved using 63% less memory


===============
Version 0.9.0
===============

API/ABI break

* API change: Removed GXml.SerializableJson and GXml.Serialization, due to they
  have been unmaintained for a while now.

* API change: GXml.NodeList is now a Gee.ArrayList<GXml.Node> specialiced class for better
  bindings support. The old class has been renamed to GXml.xNodeList.

* API change: Most interfaces now return owned properties in order to allow implementations
  to handle its internals without expose/keep in memory some data, returning
  objects just on request.

* New libxml2 implementation called GNode and derivatives, expected to replace
  old implementation. It is a creating objects on demand.

* New HtmlDocument for HTML handling

* Element interface removed finalize_attr (), due it is unsed

* Element added new get_ns_attr() for namespaced attributes

* Element implements set_ns_attr()

* xNode and derivatives enter to a maintenace status, in order
  to be deprecated in future, some tests haven't been added