@@ -498,8 +498,7 @@ class TDocumentTest : GXmlTest {
 			try {
 				var f = GLib.File.new_for_path (GXmlTestConfig.TEST_DIR+"/t-read-test.xml");
 				assert (f.query_exists ());
-				var d = new TDocument ();
-				TDocument.read_doc (d, f, null);
+				var d = new TDocument.for_file (f);
 				//GLib.message ("Doc:"+d.to_string ());
 				assert (d.root != null);
 				assert (d.root.name == "Sentences");
@@ -542,8 +541,7 @@ class TDocumentTest : GXmlTest {
 			try {
 				var f = GLib.File.new_for_path (GXmlTestConfig.TEST_DIR+"/t-read-test.xml");
 				assert (f.query_exists ());
-				var d = new TDocument ();
-				TDocument.read_doc (d, f, null);
+				var d = new TDocument.for_file (f);
 				assert (d.children[0] is GXml.Comment);
 				assert (d.children[0].value == " Top Level Comment ");
 				var a = d.root.children[2];
@@ -559,7 +557,7 @@ class TDocumentTest : GXmlTest {
 			try {
 				var f = GLib.File.new_for_path (GXmlTestConfig.TEST_DIR+"/t-read-test.xml");
 				assert (f.query_exists ());
-				var d = new TDocument ();
+				var d = new TDocument.for_file (f);
 				TDocument.read_doc (d, f, null);
 				assert (d.children[1] is GXml.ProcessingInstruction);
 				assert ((d.children[1] as GXml.ProcessingInstruction).target == "target");
@@ -583,7 +581,7 @@ class TDocumentTest : GXmlTest {
 			try {
 				var f = GLib.File.new_for_path (GXmlTestConfig.TEST_DIR+"/t-read-test.xml");
 				assert (f.query_exists ());
-				var d = new TDocument ();
+				var d = new TDocument.for_file (f);
 				TDocument.read_doc (d, f, null);
 				assert (d.root.children.size == 6);
 				var p = (d.root.children[5]);
