@@ -3,6 +3,7 @@ Version 0.9.3
 ===============
 
 * API change TwNode and derived classes renamed to TNode
+* Added Read capabilities to TDocument
 
 
 ===============
